--- a/index.html
+++ b/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
-	<script type="text/babel">
+	<script>
 
-		const spacePeople = () => {
-			return new Promise((resolves, rejects) => {
-				const api = 'http://api.open-notify.org/astros.json';
-				const request = new XMLHttpRequest();
-				request.open('GET', api);
-				request.onload = () => {
-					if(request.status === 200) {
-						resolves(JSON.parse(request.response));
-					} else {
-						rejects(Error(request.statusText));
-					}
-				};
-				request.onerror = err => rejects(err);
-				request.send();
-			});
-		};
+		(async(loginName) => {
+			try {
+				var response = await fetch(`https://api.github.com/users/${loginName}/followers`);
+				var json = await response.json();
+				var followerList = json.map(user => user.login);
+				console.log(followerList);
+			} catch(e) {
+				console.log("Data didn't load", e);
+			}
+		})('eveporcello');
 
-		spacePeople().then(
-			spaceData => console.log(spaceData),
-			err => console.error(
-				new Error('Cannot load space people')
-			)
-		);
 
 	</script>
-	<title>Building Promises</title>
+	<title>Async and Fetch</title>
 </head>
 <body>
 </body>	
